...
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/text_recent_transactions"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/transaction_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16"
                android:nestedScrollingEnabled="false"
                tools:listitem="@layout/item_transaction_layout" />

...
